--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,6 +83,15 @@ jobs:
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: frontend-
             GIT_API_TAGGING: false
+
+        - name: Trigger CD for Frontend
+          run: |
+            gh workflow run cd.yaml \
+              -f service=frontend \
+              -f version=${{ steps.tag_version.outputs.new_tag }} \
+              -f sha=${{ github.sha }}
+          env:
+            GH_TOKEN: ${{ secrets.CI_CD_PAT }}
     
     insights-api-ci:
         needs: path-filter
@@ -130,7 +139,8 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-          
+            token: ${{ secrets.CI_CD_PAT }}
+
         - name: Bump Insights Api version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
@@ -140,6 +150,15 @@ jobs:
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: insights_api-
             GIT_API_TAGGING: false
+
+        - name: Trigger CD for Insights API
+          run: |
+            gh workflow run cd.yaml \
+              -f service=insights_api \
+              -f version=${{ steps.tag_version.outputs.new_tag }} \
+              -f sha=${{ github.sha }}
+          env:
+            GH_TOKEN: ${{ secrets.CI_CD_PAT }}
 
     data-ingestion-ci:
       needs: path-filter
@@ -187,8 +206,9 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-          
-        - name: Bump Insights Api version
+            token: ${{ secrets.CI_CD_PAT }}
+
+        - name: Bump Data Ingestion version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
@@ -197,6 +217,15 @@ jobs:
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: data_ingestion-
             GIT_API_TAGGING: false
+
+        - name: Trigger CD for Data Ingestion
+          run: |
+            gh workflow run cd.yaml \
+              -f service=data_ingestion \
+              -f version=${{ steps.tag_version.outputs.new_tag }} \
+              -f sha=${{ github.sha }}
+          env:
+            GH_TOKEN: ${{ secrets.CI_CD_PAT }}
 
     llm-summary-ci:
         needs: path-filter
@@ -244,8 +273,9 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-          
-        - name: Bump Insights Api version
+            token: ${{ secrets.CI_CD_PAT }}
+
+        - name: Bump LLM Summary version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
@@ -254,6 +284,15 @@ jobs:
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: llm_summary-
             GIT_API_TAGGING: false
+
+        - name: Trigger CD for LLM Summary
+          run: |
+            gh workflow run cd.yaml \
+              -f service=llm_summary \
+              -f version=${{ steps.tag_version.outputs.new_tag }} \
+              -f sha=${{ github.sha }}
+          env:
+            GH_TOKEN: ${{ secrets.CI_CD_PAT }}
 
     ranking-calculator-ci:
         needs: path-filter
@@ -301,8 +340,9 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-          
-        - name: Bump Insights Api version
+            token: ${{ secrets.CI_CD_PAT }}
+
+        - name: Bump Ranking Calculator version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
@@ -311,6 +351,15 @@ jobs:
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: ranking_calculator-
             GIT_API_TAGGING: false
+
+        - name: Trigger CD for Ranking Calculator
+          run: |
+            gh workflow run cd.yaml \
+              -f service=ranking_calculator \
+              -f version=${{ steps.tag_version.outputs.new_tag }} \
+              -f sha=${{ github.sha }}
+          env:
+            GH_TOKEN: ${{ secrets.CI_CD_PAT }}
 
     sentiment-analysis-ci:
         needs: path-filter
@@ -358,8 +407,9 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-          
-        - name: Bump Insights Api version
+            token: ${{ secrets.CI_CD_PAT }}
+
+        - name: Bump Sentiment Analysis version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
@@ -368,3 +418,12 @@ jobs:
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: sentiment_analysis-
             GIT_API_TAGGING: false
+
+        - name: Trigger CD for Sentiment Analysis
+          run: |
+            gh workflow run cd.yaml \
+              -f service=sentiment_analysis \
+              -f version=${{ steps.tag_version.outputs.new_tag }} \
+              -f sha=${{ github.sha }}
+          env:
+            GH_TOKEN: ${{ secrets.CI_CD_PAT }}
