--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,14 +72,12 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0
-            token: ${{ secrets.CI_CD_PAT }}
-            persist-credentials: true
 
         - name: Bump Frontend version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.CI_CD_PAT }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: frontend-
@@ -139,14 +137,12 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-            token: ${{ secrets.CI_CD_PAT }}
-            persist-credentials: true
 
         - name: Bump Insights Api version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.CI_CD_PAT }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: insights_api-
@@ -206,14 +202,12 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-            token: ${{ secrets.CI_CD_PAT }}
-            persist-credentials: true
 
         - name: Bump Data Ingestion version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.CI_CD_PAT }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: data_ingestion-
@@ -273,14 +267,12 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-            token: ${{ secrets.CI_CD_PAT }}
-            persist-credentials: true
 
         - name: Bump LLM Summary version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.CI_CD_PAT }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: llm_summary-
@@ -340,14 +332,12 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-            token: ${{ secrets.CI_CD_PAT }}
-            persist-credentials: true
 
         - name: Bump Ranking Calculator version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.CI_CD_PAT }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: ranking_calculator-
@@ -407,14 +397,12 @@ jobs:
         - uses: actions/checkout@v4
           with:
             fetch-depth: 0 # gives it full history of commits to find the last tag
-            token: ${{ secrets.CI_CD_PAT }}
-            persist-credentials: true
 
         - name: Bump Sentiment Analysis version
           id: tag_version
           uses: anothrNick/github-tag-action@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.CI_CD_PAT }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: sentiment_analysis-
